# kwin-effects-yet-another-magic-lamp

./: CMakeLists.txt  README.md
cmake/Modules/: FindKWinEffects.cmake  Findepoxy.cmake  Findkwineffects.cmake  PkgConfigGetVar.cmake
src/: CMakeLists.txt  Model.cc  Model.h  OffscreenRenderer.cc  OffscreenRenderer.h  WindowMeshRenderer.cc  WindowMeshRenderer.h  WindowQuad.h  YetAnotherMagicLampConfig.kcfgc  YetAnotherMagicLampEffect.cc  YetAnotherMagicLampEffect.h  common.h  metadata.json  options.kcfg  plugin.cc  utils.cc  utils.h
src/hacks/: TimeLine.h
src/kcm/: CMakeLists.txt  YetAnotherMagicLampEffectKCM.cc  YetAnotherMagicLampEffectKCM.h  YetAnotherMagicLampEffectKCM.ui  metadata.json  plugin.cc
